<resources>
    <string name="app_name" translatable="false">Tiny Distinctive Ring</string>
    <string name="title_activity_main_fab" translatable="false">Tiny Distinctive Ring</string>
    <string name="stub_phone_number" translatable="false">+12 (345) 67 88 9900</string>
    <string name="action_title_add_manual">Manual add</string>
    <string name="action_main_about_title">About…</string>
    <string name="action_title_add_from_contacts">Add from Contacts</string>
    <string name="action_title_help">Help</string>
    <string name="action_title_delete">Delete numbers(s)</string>
    <string name="manual_add_dialog_title">Add entry manually</string>
    <string name="dialog_first_name_hint">Enter first name</string>
    <string name="dialog_second_name_hint">Enter second name</string>
    <string name="dialog_number_hint" translatable="false">+00 (000) 00-0000</string>
    <string name="dialog_add_entry">Add entry</string>
    <string name="dialog_cancel">CANCEL</string>
    <string name="dialog_ok">Ok</string>
    <string name="content_authority" translatable="false">io.github.d2edev.distinctivering</string>
    <string name="sort_by_first_name">by First Name</string>
    <string name="sort_by_last_name">by Last name</string>
    <string name="sort_by_number">by Number</string>
    <string name="sort_asc">Asc</string>
    <string name="sort_desc">Desc</string>
    <string name="no_records">No records!</string>
    <string name="about_main_text">d2e DEVELOPMENT &#169;2016\nSmall application which enables ringing during calls from selected persons despite current volume profile. Click below to visit us:</string>
    <string name="about_web_address" translatable="false">d2edev.github.io</string>
    <string name="contacts_add_dialog_title">Entry from Contacts</string>
    <string name="no_contacts_provider">No contacts app detected.\nInstall any (i.e. standard Google Contacts)\nand try again!</string>
    <string name="no_data_added">No data added! Pls check if number is already on list!</string>
    <string name="ring_enabled">Ring enabled</string>
    <string name="no_records_add">No records. Use Main Screen menu to add some from Contact Book or manually</string>
    <string name="help_on_add_from_contacts">This will launch system contact manager (Google Contacts or similar) in contact selection mode. After selecting contact (and number, if several) result will be returned to dialog for final confirmation or cancellation.</string>
    <string name="help_main_header">Main Screen Help:</string>
    <string name="help_on_delete">This wil switch user interface in  mode where records can be selected and deleted. See more details in help screen for this mode.</string>
    <string name="help_on_main_screen">Main screen presents list of contacts stored for Distinctive Ring enablement. List could be sorted by clicking respective part of it\'s header (left - by first name, second name or number, right - ascending or descending, respectively). If list is not empty, an action button presented right down, which enables/disables distictive ring for listed contacts. If Distictive Ring is enabled, there\'s notification shown (a bell with lightning), clicking on which will bring main program screen. Menu actions are listed below.</string>
    <string name="help_on_add_manual">This will launch dialog for entering entry details manually. Phone number is obligatory and at least one of first or last name should be entered. Clicking the default contact icon (human siluette) will bring system Photo manager in selection mode (i.e. Android gallery or similar) if one installed. Selected picture will be saved as avatar for entry being entered.</string>
    <string name="help_delete_header">Delete Screen Help:</string>
    <string name="help_on_delete_screen">Delete screen presents list of contacts stored. List could be sorted by clicking respective part of it\'s header (left - by first name, second name or number, right - ascending or descending, respectively). Each entry could be selected for deletion by clicking it. Second click deselects back. Changing sort order doesn\'t deselect previously selected items. If list is not empty and at least one entry selected, an action button presented right down, click on which deletes currenly selected records and rebuilds list on records remained. If list is empty or nothing selected then action button is not visible. Clicking on left up back arrow leaves delete screen and switches to main screen.</string>
    <string name="no_pics_provider">No pics app detected.\nInstall any (i.e. standard Google Gallery)\nand try again!</string>
    <string name="no_phone_line">No phone detected, exiting...</string>
    <string name="show_on_startup_title">Show brief HOWTO at startup</string>
    <string name="help_start_header">How it works?</string>
    <string name="help_on_start_screen">Distinctive Ring app lets someone you allow reach you with a loud call even if ring volume set to zero. Of course the matter should be important - that\'s why calling side have to call twice (pls, let you trusted caller know about it!). If in silent mode, first call opens time window (30 sec by default) during which other incoming call rings loud. After that ringer sound settings return to previous (silent state).\nPlease refer to help for main and other screens for details</string>
    <string name="action_title_settings">Settings</string>
    <string name="pref_key_show_on_startup" translatable="false">key_show_on_startup</string>
    <string name="pref_key_time_window" translatable="false">key_timewindow</string>
    <string name="undefined">Undefined</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="timewindow_title">Time window duration</string>
    <string name="pref_summary_time_window">Next call rings loud during, sec.:</string>
    <string name="secs">sec.</string>
    <string name="pref_seek_bar_message">Set to %1$d %2$s</string>
    <string name="perm_read_contacts_desc">Currently application does not have access to Contacts, please grant it to be able to add some to Distinctive Ring list. If you choose YES, a dialog will appear, where you must confirm your choice. Do you allow it?</string>
    <string name="perm_title_general">Permission needed</string>
    <string name="perm_read_ext_stor_desc">Currently application does not have access to files on ext storage, please grant it to be able to use pictures you have on your device as user avatars. If you choose YES, a dialog will appear, where you must confirm your choice. Do you allow it?</string>
    <string name="perm_read_phone_state_desc">Currently application does not have access to phone status, please grant it, so application will be able to read incoming call numbers which is needed for it\'s work. If you choose YES, a dialog will appear, where you must confirm your choice. If you choose NO application will stop as it uncapable to function properly.Do you allow it?</string>
    <string name="perm_refused">Permission not granted, operation skipped</string>
    <string name="perm_refused_read_phone">Permission not granted, exiting...</string>
    <string name="perm_granted_read_phone">Permission granted, pls start app again!</string>
</resources>
