<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/giant_margin"
    android:layout_marginLeft="@dimen/giant_margin"
    android:layout_marginRight="@dimen/giant_margin"
    android:layout_marginStart="@dimen/giant_margin">

    <TextView
        android:id="@+id/dialog_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/giant_margin"
        android:layout_alignParentTop="true"
        android:background="@color/my_primary_light"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_vertical|right"
        android:paddingEnd="@dimen/listview_middle_margin"
        android:paddingRight="@dimen/listview_middle_margin"
        android:text="@string/manual_add_dialog_title"
        android:textSize="@dimen/font_20" />

    <ImageView
        android:id="@+id/dialog_image"
        android:layout_width="@dimen/listview_image_view"
        android:layout_height="@dimen/listview_image_view"
        android:layout_alignLeft="@+id/dialog_header"
        android:layout_alignStart="@+id/dialog_header"
        android:layout_margin="@dimen/listview_small_margin"
        tools:src="@drawable/ic_person_green" />

    <EditText
        android:id="@+id/dialog_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_header"
        android:layout_margin="@dimen/listview_small_margin"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/dialog_first_name_hint"
        android:textSize="@dimen/font_20" />

    <EditText
        android:id="@+id/dialog_second_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_first_name"
        android:layout_margin="@dimen/listview_small_margin"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/dialog_second_name_hint"
        android:textSize="@dimen/font_20" />

    <EditText
        android:id="@+id/dialog_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_second_name"
        android:layout_margin="@dimen/listview_small_margin"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/dialog_number_hint"
        android:inputType="number"
        android:textSize="@dimen/font_20" />



</RelativeLayout>