<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/giant_margin"
    android:layout_marginLeft="@dimen/giant_margin"
    android:layout_marginRight="@dimen/giant_margin"
    android:layout_marginStart="@dimen/giant_margin">

    <TextView
        android:id="@+id/about_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/giant_margin"
        android:layout_alignParentTop="true"
        android:background="@color/my_primary"
        android:textColor="@color/my_icons"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_vertical|right"
        android:paddingEnd="@dimen/listview_middle_margin"
        android:paddingRight="@dimen/listview_middle_margin"
        android:text="@string/app_name"
        android:textSize="@dimen/font_20" />

    <ImageView
        android:id="@+id/about_logo"
        android:layout_width="@dimen/about_image_view"
        android:layout_height="@dimen/about_image_view"
        android:layout_alignLeft="@+id/about_header"
        android:layout_alignStart="@+id/about_header"
        android:layout_margin="@dimen/listview_small_margin"
        android:src="@drawable/logo_d2edev" />

    <TextView
        android:id="@+id/about_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_header"
        android:layout_margin="@dimen/listview_small_margin"
        android:fontFamily="sans-serif-condensed"
        android:textSize="@dimen/font_20"
        android:text="@string/about_main_text"
        />

    <TextView
        android:id="@+id/about_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_text"
        android:layout_marginBottom="@dimen/listview_small_margin"
        android:textColor="@color/my_primary_dark"
        android:fontFamily="sans-serif"
        android:textSize="@dimen/font_20"
        android:gravity="center"
        android:text="@string/about_web_address"/>




</RelativeLayout>