<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#cd4caf50"
        android:orientation="vertical"
        android:paddingBottom="@dimen/listview_small_margin">
        <!-- Header-->
        <TextView
            android:id="@+id/scroll_dialog_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="@dimen/listview_small_margin"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:textColor="@color/my_icons"
            android:textSize="@dimen/font_24"
            android:text="@string/help_start_header" />

        <!-- General info-->
        <TextView
            android:id="@+id/scroll_dialog_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="@dimen/listview_small_margin"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/help_on_start_screen"
            android:textColor="@color/my_icons"
            android:textSize="@dimen/font_20" />

        <Switch
            android:id="@+id/scroll_dialog_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/my_icons"
            android:textSize="@dimen/font_16"
            android:text="@string/show_on_startup_title"
            />


        <!-- Help section-->
        <!-- About section-->
    </LinearLayout>
</ScrollView>
