<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="wrap_content"
    android:background="@android:color/transparent"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#cd4caf50"
        android:paddingBottom="@dimen/listview_small_margin"
        >
        <!-- Header-->
        <TextView
            android:layout_alignParentTop="true"
            android:id="@+id/help_main_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/listview_small_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:textColor="@color/my_icons"
            android:text="@string/help_main_header"
            android:fontFamily="sans-serif-condensed"
            android:textSize="@dimen/font_24"
            android:gravity="center"
            />

        <!-- General info-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/listview_small_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:textColor="@color/my_icons"
            android:textSize="@dimen/font_20"
            android:fontFamily="sans-serif-condensed"
            android:id="@+id/help_main_message_general"
            android:layout_below="@+id/help_main_header"
            android:text="@string/help_on_main_screen"
            />

        <!-- Add from contacts section-->
        <ImageView
            android:layout_below="@+id/help_main_message_general"
            android:layout_marginTop="@dimen/listview_small_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/help_main_icon_add"
            android:src="@drawable/ic_add_circle_white"
            />
        <TextView
            android:layout_marginTop="@dimen/listview_small_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:textColor="@color/my_icons"
            android:fontFamily="sans-serif-condensed"
            android:textSize="@dimen/font_24"
            android:id="@+id/help_title_add_contacts"
            android:text="@string/action_title_add_from_contacts"
            android:layout_below="@+id/help_main_message_general"
            android:layout_toRightOf="@id/help_main_icon_add"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/listview_small_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:textColor="@color/my_icons"
            android:textSize="@dimen/font_20"
            android:fontFamily="sans-serif-condensed"
            android:id="@+id/help_main_message_add_from_contacts"
            android:layout_below="@+id/help_title_add_contacts"
            android:text="@string/help_on_add_from_contacts"
            />
        <!-- Delete section-->
        <ImageView
            android:layout_marginTop="@dimen/listview_small_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/help_main_message_add_from_contacts"
            android:id="@+id/help_main_icon_delete"
            android:src="@drawable/ic_delete_white"
            />
        <TextView
            android:layout_marginTop="@dimen/listview_small_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:textColor="@color/my_icons"
            android:fontFamily="sans-serif-condensed"
            android:textSize="@dimen/font_24"
            android:id="@+id/help_title_delete"
            android:text="@string/action_title_delete"
            android:layout_below="@+id/help_main_message_add_from_contacts"
            android:layout_toRightOf="@id/help_main_icon_delete"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/listview_small_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:textColor="@color/my_icons"
            android:textSize="@dimen/font_20"
            android:fontFamily="sans-serif-condensed"
            android:id="@+id/help_main_message_delete"
            android:layout_below="@+id/help_title_delete"
            android:text="@string/help_on_delete"
            />

        <!-- Manual add section-->
        <ImageView
            android:layout_marginTop="@dimen/listview_small_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/help_main_message_delete"
            android:id="@+id/help_main_icon_manual_add"
            android:src="@drawable/ic_manual_add"
            />
        <TextView
            android:layout_marginTop="@dimen/listview_small_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:textColor="@color/my_icons"
            android:fontFamily="sans-serif-condensed"
            android:textSize="@dimen/font_24"
            android:id="@+id/help_title_add_manual"
            android:text="@string/action_title_add_manual"
            android:layout_below="@+id/help_main_message_delete"
            android:layout_toRightOf="@id/help_main_icon_manual_add"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/listview_small_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:textColor="@color/my_icons"
            android:textSize="@dimen/font_20"
            android:fontFamily="sans-serif-condensed"
            android:id="@+id/help_main_message_add_manual"
            android:layout_below="@+id/help_title_add_manual"
            android:text="@string/help_on_add_manual"
            />
        <!-- Help section-->
        <!-- About section-->
    </RelativeLayout>
</ScrollView>
